crates/components/tests/snapshots/components__alerts_2x1_at_250x70.snap
---
source: crates/components/tests/components.rs
expression: "view_snapshot(a.as_mut(), &history, &th, size)"
---
size: 38x8
tier: list
view:
  text:
    - - bold: false
        role: TextGhost
        s: no active alerts
