crates/components/tests/snapshots/components__audio_4x2_at_250x70.snap
---
source: crates/components/tests/components.rs
expression: "view_snapshot(au.as_mut(), &store, &th, size)"
---
size: 80x20
tier: spectrum
view:
  stack:
    children:
      - - Len(1)
        - text:
            - - bold: true
                role: Title
                s: D50s (synthetic)
              - bold: false
                role: TextMuted
                s: "  L −8 dB · R −8 dB"
      - - Fill(1)
        - bars:
            gradient: Audio
            labels: ~
            n: 79
            peaks: true
            values:
              - 0
              - 0.2942398488521576
              - 0.2942398488521576
              - 0
              - 0.5815240144729614
              - 0.5815240144729614
              - 0
              - 0.03885654732584953
              - 0.03885654732584953
              - 0
              - 0.08541885018348694
              - 0.08541885018348694
              - 0
              - 0.09334676712751389
              - 0.09334676712751389
              - 0
              - 0.14032843708992004
              - 0.14032843708992004
              - 0
              - 0.34578874707221985
              - 0.34578874707221985
              - 0
              - 0.037882205098867416
              - 0.037882205098867416
              - 0
              - 0.1670936644077301
              - 0.1670936644077301
              - 0
              - 0.25528860092163086
              - 0.25528860092163086
              - 0
              - 0.122102290391922
              - 0.122102290391922
              - 0
              - 0.6939327120780945
              - 0.6939327120780945
              - 0
              - 0.039132073521614075
              - 0.039132073521614075
              - 0
              - 0.039132073521614075
              - 0.039132073521614075
              - 0
              - 0.6302132606506348
              - 0.6302132606506348
              - 0
              - 0.11254436522722244
              - 0.11254436522722244
              - 0
              - 0.2340487837791443
              - 0.2340487837791443
              - 0
              - 0.1529337763786316
              - 0.1529337763786316
              - 0
              - 0.037882205098867416
              - 0.037882205098867416
              - 0
              - 0.46027058362960815
              - 0.46027058362960815
              - 0
              - 0.17848904430866241
              - 0.17848904430866241
              - 0
              - 0.11878717690706253
              - 0.11878717690706253
              - 0
              - 0.10449916124343872
              - 0.10449916124343872
              - 0
              - 0.03885654732584953
              - 0.03885654732584953
              - 0
              - 0.5815240144729614
              - 0.5815240144729614
              - 0
              - 0.2942398488521576
              - 0.2942398488521576
              - 0
      - - Len(1)
        - text:
            - - bold: false
                role: TextMuted
                s: 16k · 693 · 30 Hz · 693 · 16k
    dir: V
