crates/components/tests/snapshots/components__audio_zoom_at_250x70.snap
---
source: crates/components/tests/components.rs
expression: "view_snapshot(au.as_mut(), &store, &th, size)"
---
size: 248x66
tier: spectrum
view:
  stack:
    children:
      - - Len(1)
        - text:
            - - bold: true
                role: Title
                s: D50s (synthetic)
              - bold: false
                role: TextMuted
                s: "  L −8 dB · R −8 dB"
      - - Fill(1)
        - bars:
            gradient: Audio
            labels: ~
            n: 247
            peaks: true
            values:
              - 0
              - 0.19317150115966797
              - 0.19317150115966797
              - 0
              - 0.08688110113143921
              - 0.08688110113143921
              - 0
              - 0.2942398488521576
              - 0.2942398488521576
              - 0
              - 0.5815240144729614
              - 0.5815240144729614
              - 0
              - 0.08754206448793411
              - 0.08754206448793411
              - 0
              - 0.01956314779818058
              - 0.01956314779818058
              - 0
              - 0.032915666699409485
              - 0.032915666699409485
              - 0
              - 0.028588110581040382
              - 0.028588110581040382
              - 0
              - 0.03885654732584953
              - 0.03885654732584953
              - 0
              - 0.03571154177188873
              - 0.03571154177188873
              - 0
              - 0.012954440899193287
              - 0.012954440899193287
              - 0
              - 0.08541885018348694
              - 0.08541885018348694
              - 0
              - 0.021052638068795204
              - 0.021052638068795204
              - 0
              - 0.09334676712751389
              - 0.09334676712751389
              - 0
              - 0.02669752761721611
              - 0.02669752761721611
              - 0
              - 0.019922921434044838
              - 0.019922921434044838
              - 0
              - 0.14032843708992004
              - 0.14032843708992004
              - 0
              - 0.018413599580526352
              - 0.018413599580526352
              - 0
              - 0.018556227907538414
              - 0.018556227907538414
              - 0
              - 0.15433232486248016
              - 0.15433232486248016
              - 0
              - 0.34578874707221985
              - 0.34578874707221985
              - 0
              - 0.18158841133117676
              - 0.18158841133117676
              - 0
              - 0.020327407866716385
              - 0.020327407866716385
              - 0
              - 0.037882205098867416
              - 0.037882205098867416
              - 0
              - 0.025011731311678886
              - 0.025011731311678886
              - 0
              - 0.03201714903116226
              - 0.03201714903116226
              - 0
              - 0.12479805946350098
              - 0.12479805946350098
              - 0
              - 0.03668370097875595
              - 0.03668370097875595
              - 0
              - 0.1670936644077301
              - 0.1670936644077301
              - 0
              - 0.025168225169181824
              - 0.025168225169181824
              - 0
              - 0.25528860092163086
              - 0.25528860092163086
              - 0
              - 0.03197207674384117
              - 0.03197207674384117
              - 0
              - 0.0069789704866707325
              - 0.0069789704866707325
              - 0
              - 0.026076944544911385
              - 0.026076944544911385
              - 0
              - 0.122102290391922
              - 0.122102290391922
              - 0
              - 0.6939327120780945
              - 0.6939327120780945
              - 0
              - 0.3371567130088806
              - 0.3371567130088806
              - 0
              - 0.12227800488471985
              - 0.12227800488471985
              - 0
              - 0.027307813987135887
              - 0.027307813987135887
              - 0
              - 0.039132073521614075
              - 0.039132073521614075
              - 0
              - 0.02515701949596405
              - 0.02515701949596405
              - 0
              - 0.02515701949596405
              - 0.02515701949596405
              - 0
              - 0.039132073521614075
              - 0.039132073521614075
              - 0
              - 0.027307813987135887
              - 0.027307813987135887
              - 0
              - 0.1127200797200203
              - 0.1127200797200203
              - 0
              - 0.30848294496536255
              - 0.30848294496536255
              - 0
              - 0.6302132606506348
              - 0.6302132606506348
              - 0
              - 0.11254436522722244
              - 0.11254436522722244
              - 0
              - 0.026076944544911385
              - 0.026076944544911385
              - 0
              - 0.0069789704866707325
              - 0.0069789704866707325
              - 0
              - 0.03197207674384117
              - 0.03197207674384117
              - 0
              - 0.2340487837791443
              - 0.2340487837791443
              - 0
              - 0.025168225169181824
              - 0.025168225169181824
              - 0
              - 0.1529337763786316
              - 0.1529337763786316
              - 0
              - 0.03668370097875595
              - 0.03668370097875595
              - 0
              - 0.1141781434416771
              - 0.1141781434416771
              - 0
              - 0.03201714903116226
              - 0.03201714903116226
              - 0
              - 0.025011731311678886
              - 0.025011731311678886
              - 0
              - 0.037882205098867416
              - 0.037882205098867416
              - 0
              - 0.020327407866716385
              - 0.020327407866716385
              - 0
              - 0.23310524225234985
              - 0.23310524225234985
              - 0
              - 0.46027058362960815
              - 0.46027058362960815
              - 0
              - 0.20584915578365326
              - 0.20584915578365326
              - 0
              - 0.018556227907538414
              - 0.018556227907538414
              - 0
              - 0.018413599580526352
              - 0.018413599580526352
              - 0
              - 0.17848904430866241
              - 0.17848904430866241
              - 0
              - 0.019922921434044838
              - 0.019922921434044838
              - 0
              - 0.02669752761721611
              - 0.02669752761721611
              - 0
              - 0.11878717690706253
              - 0.11878717690706253
              - 0
              - 0.021052638068795204
              - 0.021052638068795204
              - 0
              - 0.10449916124343872
              - 0.10449916124343872
              - 0
              - 0.012954440899193287
              - 0.012954440899193287
              - 0
              - 0.03571154177188873
              - 0.03571154177188873
              - 0
              - 0.03885654732584953
              - 0.03885654732584953
              - 0
              - 0.028588110581040382
              - 0.028588110581040382
              - 0
              - 0.032915666699409485
              - 0.032915666699409485
              - 0
              - 0.01956314779818058
              - 0.01956314779818058
              - 0
              - 0.08754206448793411
              - 0.08754206448793411
              - 0
              - 0.5815240144729614
              - 0.5815240144729614
              - 0
              - 0.2942398488521576
              - 0.2942398488521576
              - 0
              - 0.08688110113143921
              - 0.08688110113143921
              - 0
              - 0.19317150115966797
              - 0.19317150115966797
              - 0
      - - Len(1)
        - text:
            - - bold: false
                role: TextMuted
                s: 16k · 693 · 30 Hz · 693 · 16k
    dir: V
